# dookie

./: LICENSE  README.md  pyproject.toml
src/: dookie.py
