[project]
name = "dookie"
version = "0.0.1"
authors = [
  { name="Sebastiano Bernuzzi", email="sebastiano.bernuzzi@uni-jena.de" },
]
description = "The essential package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bernuzzi/dookie"
"Bug Tracker" = "https://github.com/bernuzzi/dookie/issues"